<resources>
    <string name="app_name">Movies</string>
    <string name="saved_instance_name">MoviesInstance</string>
    <string name="action_query_now_playing_movies">Now Playing</string>
    <string name="action_query_popular_movies">Popular</string>
    <string name="action_query_top_rated_movies">Top Rated</string>
    <string name="action_query_upcoming_movies">Upcoming</string>
    <string name="error_message_query_fail">Fail the query has.\nGet online you must.</string>
    <string name="movie_details">Movie Details</string>
    <string name="movie_details_release_date">Release Date\n</string>
    <string name="movie_details_vote_averate">Vote Average\n</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>
    <string name="content_authority">com.example.android.movies</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_sort_by_now_playing">Now Playing</string>
    <string name="action_sort_by_popular">Popular</string>
    <string name="action_sort_by_top_rated">Top Rated</string>
    <string name="action_sort_by_upcoming">Upcoming</string>
    <string name="action_sort_by_favorite">Favorites</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="rating">Rating</string>
    <string name="release_date">Released</string>
    <string name="details">Details</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
</resources>
